tests/src/frontend/typechecking/invalid/value_class_4.sk
mutable value class Foo<T>(mutable x: T)
fun foo(): void {
  o = mutable Foo(42);
  o.!x = 0
}
